crates/pgls_pretty_print/tests/snapshots/multi/tests__rules_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/rules.sql
snapshot_kind: text
---
CREATE TABLE rtest_t1 (
  a INT,
  b INT
);

CREATE TABLE rtest_t2 (
  a INT,
  b INT
);

CREATE TABLE rtest_t3 (
  a INT,
  b INT
);

CREATE VIEW rtest_v1
AS SELECT * FROM rtest_t1;

CREATE RULE rtest_v1_ins
AS ON INSERT TO rtest_v1
DO INSTEAD
  INSERT INTO rtest_t1 VALUES (new.a, new.b);;

CREATE RULE rtest_v1_upd
AS ON UPDATE TO rtest_v1
DO INSTEAD
  UPDATE rtest_t1
  SET a = new.a,
  b = new.b
  WHERE
    a = old.a;;

CREATE RULE rtest_v1_del
AS ON DELETE TO rtest_v1
DO INSTEAD
  DELETE FROM rtest_t1 WHERE a = old.a;;

COMMENT ON RULE rtest_v1_bad ON rtest_v1 IS 'bad rule';

COMMENT ON RULE rtest_v1_del ON rtest_v1 IS 'delete rule';

COMMENT ON RULE rtest_v1_del ON rtest_v1 IS NULL;

CREATE TABLE rtest_system (
  sysname TEXT,
  sysdesc TEXT
);

CREATE TABLE rtest_interface (
  sysname TEXT,
  ifname TEXT
);

CREATE TABLE rtest_person (
  pname TEXT,
  pdesc TEXT
);

CREATE TABLE rtest_admin (
  pname TEXT,
  sysname TEXT
);

CREATE RULE rtest_sys_upd
AS ON UPDATE TO rtest_system
DO
  (UPDATE rtest_interface
  SET sysname = new.sysname
  WHERE
    sysname = old.sysname;;
  UPDATE rtest_admin
  SET sysname = new.sysname
  WHERE
    sysname = old.sysname;);

CREATE RULE rtest_sys_del
AS ON DELETE TO rtest_system
DO
  (DELETE FROM rtest_interface
  WHERE
    sysname = old.sysname;;
  DELETE FROM rtest_admin
  WHERE
    sysname = old.sysname;);

CREATE RULE rtest_pers_upd
AS ON UPDATE TO rtest_person
DO
  UPDATE rtest_admin
  SET pname = new.pname
  WHERE
    pname = old.pname;;

CREATE RULE rtest_pers_del
AS ON DELETE TO rtest_person
DO
  DELETE FROM rtest_admin WHERE pname = old.pname;;

CREATE TABLE rtest_emp (
  ename CHAR(20),
  salary NUMERIC
);

CREATE TABLE rtest_emplog (
  ename CHAR(20),
  who NAME,
  action CHAR(10),
  newsal NUMERIC,
  oldsal NUMERIC
);

CREATE TABLE rtest_empmass (
  ename CHAR(20),
  salary NUMERIC
);

CREATE RULE rtest_emp_ins
AS ON INSERT TO rtest_emp
DO
  INSERT INTO rtest_emplog
  VALUES (
    new.ename,
    CURRENT_USER,
    'hired',
    new.salary,
    '0.00'
  );;

CREATE RULE rtest_emp_upd
AS ON UPDATE TO rtest_emp WHERE
  new.salary <> old.salary
DO
  INSERT INTO rtest_emplog
  VALUES (
    new.ename,
    CURRENT_USER,
    'honored',
    new.salary,
    old.salary
  );;

CREATE RULE rtest_emp_del
AS ON DELETE TO rtest_emp
DO
  INSERT INTO rtest_emplog
  VALUES (
    old.ename,
    CURRENT_USER,
    'fired',
    '0.00',
    old.salary
  );;

CREATE TABLE rtest_t4 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_t5 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_t6 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_t7 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_t8 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_t9 (
  a INT,
  b TEXT
);

CREATE RULE rtest_t4_ins1
AS ON INSERT TO rtest_t4 WHERE
  new.a >= 10 AND new.a < 20
DO INSTEAD
  INSERT INTO rtest_t5 VALUES (new.a, new.b);;

CREATE RULE rtest_t4_ins2
AS ON INSERT TO rtest_t4 WHERE
  new.a >= 20 AND new.a < 30
DO
  INSERT INTO rtest_t6 VALUES (new.a, new.b);;

CREATE RULE rtest_t5_ins
AS ON INSERT TO rtest_t5 WHERE
  new.a > 15
DO
  INSERT INTO rtest_t7 VALUES (new.a, new.b);;

CREATE RULE rtest_t6_ins
AS ON INSERT TO rtest_t6 WHERE
  new.a > 25
DO INSTEAD
  INSERT INTO rtest_t8 VALUES (new.a, new.b);;

CREATE TABLE rtest_order1 (a INT);

CREATE TABLE rtest_order2 (
  a INT,
  b INT,
  c TEXT
);

CREATE SEQUENCE rtest_seq;

CREATE RULE rtest_order_r3
AS ON INSERT TO rtest_order1
DO INSTEAD
  INSERT INTO rtest_order2
  VALUES (
    new.a,
    nextval('rtest_seq'),
    'rule 3 - this should run 3rd'
  );;

CREATE RULE rtest_order_r4
AS ON INSERT TO rtest_order1 WHERE
  a < 100
DO INSTEAD
  INSERT INTO rtest_order2
  VALUES (
    new.a,
    nextval('rtest_seq'),
    'rule 4 - this should run 4th'
  );;

CREATE RULE rtest_order_r2
AS ON INSERT TO rtest_order1
DO
  INSERT INTO rtest_order2
  VALUES (
    new.a,
    nextval('rtest_seq'),
    'rule 2 - this should run 2nd'
  );;

CREATE RULE rtest_order_r1
AS ON INSERT TO rtest_order1
DO INSTEAD
  INSERT INTO rtest_order2
  VALUES (
    new.a,
    nextval('rtest_seq'),
    'rule 1 - this should run 1st'
  );;

CREATE TABLE rtest_nothn1 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_nothn2 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_nothn3 (
  a INT,
  b TEXT
);

CREATE TABLE rtest_nothn4 (
  a INT,
  b TEXT
);

CREATE RULE rtest_nothn_r1
AS ON INSERT TO rtest_nothn1 WHERE
  new.a >= 10 AND new.a < 20
DO INSTEAD
  NOTHING;

CREATE RULE rtest_nothn_r2
AS ON INSERT TO rtest_nothn1 WHERE
  new.a >= 30 AND new.a < 40
DO INSTEAD
  NOTHING;

CREATE RULE rtest_nothn_r3
AS ON INSERT TO rtest_nothn2 WHERE
  new.a >= 100
DO INSTEAD
  INSERT INTO rtest_nothn3 VALUES (new.a, new.b);;

CREATE RULE rtest_nothn_r4
AS ON INSERT TO rtest_nothn2
DO INSTEAD
  NOTHING;

INSERT INTO rtest_t2 VALUES (1, 21);

INSERT INTO rtest_t2 VALUES (2, 22);

INSERT INTO rtest_t2 VALUES (3, 23);

INSERT INTO rtest_t3 VALUES (1, 31);

INSERT INTO rtest_t3 VALUES (2, 32);

INSERT INTO rtest_t3 VALUES (3, 33);

INSERT INTO rtest_t3 VALUES (4, 34);

INSERT INTO rtest_t3 VALUES (5, 35);

INSERT INTO rtest_v1 VALUES (1, 11);

INSERT INTO rtest_v1 VALUES (2, 12);

SELECT * FROM rtest_v1;

DELETE FROM rtest_v1 WHERE a = 1;

SELECT * FROM rtest_v1;

INSERT INTO rtest_v1 VALUES (1, 11);

DELETE FROM rtest_v1 WHERE b = 12;

SELECT * FROM rtest_v1;

INSERT INTO rtest_v1 VALUES (2, 12);

INSERT INTO rtest_v1 VALUES (2, 13);

SELECT * FROM rtest_v1;
